--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <section class="section">
         <h2>Galería</h2>
         <div class="gallery">
-          <img src="./multimedia/tomtes.JPG" alt="Ranas a la provenzal">
-          <img src="./multimedia/niña.JPG" alt="Postre Chicholina">
-          <img src="./multimedia/resto.jpg" alt="Entradas italianas">
-          <img src="./multimedia/pastas.jpg" alt="Cerezas flambe con helado">
+          <img src="./multimedia/tomtes.jpg" alt="Tomates">
+          <img src="./multimedia/niña.JPG" alt="Niña">
+          <img src="./multimedia/resto.jpg" alt="Cantina">
+          <img src="./multimedia/pastas.jpg" alt="Entradas italianas">
         </div>
       </section>
 
